--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
-<head>
+<head lang="en">
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Bros Exposed</title>
 
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400,900' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-  
+
 <header class="header">
   <h1 class="header__title">Bros.<span>Exposed</span></h1>
   <p class="header__tagline">A 'long-form art project' by Geoff Kimball</p>
 </header>
 
-<div class="first photo" data-year="2006">
+<div class="photo photo--first" data-year="2006">
   <img src="img/2006.jpg" alt="Bros in 2006">
 </div>
-<div class="second photo" data-year="2010">
+<div class="photo photo--second" data-year="2010">
   <img src="img/2010.jpg" alt="Bros in 2010">
 </div>
-<div class="third photo" data-year="2014">
+<div class="photo photo--third" data-year="2014">
   <img src="img/2014.jpg" alt="Bros in 2014">
 </div>
 
