--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.css">
 
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-32.png">
+
 </head>
 
 <body>
